@@ -6,5 +6,6 @@ includedir=@includedir@
 Name: fuse
 Description: Filesystem in Userspace
 Version: @VERSION@
-Libs: -L${libdir} -lfuse @libfuse_libs@
+Libs: -L${libdir} -lfuse
+Libs.private: @libfuse_libs@
 Cflags: -I${includedir}/fuse -D_FILE_OFFSET_BITS=64
